client id updates

--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,5 @@
-CLIENT_ID=a715e417b7201b993f9286a8c24af754
-CLIENT_SECRET=12f38b51d854c8b2f697b743d3b59f0e16af2713
-INTEGRATION_URL=moment-card-sender-85aa5.web.app
+CLIENT_ID=86a5943229b2c7bde3e8e1e08cdf304a
+CLIENT_SECRET=ZPbqHvzVXsnlugb7SJHhngXBcHyCv88H
+INTEGRATION_URL=https://smart-chat-agent.herokuapp.com
 API_URL=https://api.livechatinc.com
 ACCOUNTS_URL=https://accounts.livechat.com
